UI fix for responsiveness on mobile devices

--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ body {
     .navbar-menu {
         position: absolute;
         display: block;
-        margin-left: 500px;
+        margin-left: calc(100% + 200px);
         background-color: #E9EAEC;
     }
     .buttons{
@@ -67,12 +67,13 @@ body {
     }
 
     .burger {
+        position: absolute;
         margin-top: 25px;
         height: 20px;
-        padding-left: 180px;
+        right: 2rem;
         border-style: none;
         background-color: #E9EAEC;
-        display: block;
+        display: flex;
     }
     
 }
